RESOLVED FIXED238288
Fix serialization of nan, infinity, -infinity for calc()
https://bugs.webkit.org/show_bug.cgi?id=238288
Summary Fix serialization of nan, infinity, -infinity for calc()
Nikos Mouchtaris
Reported 2022-03-23 14:16:23 PDT
Fix serialization of nan, infinity, -infinity for calc().
Attachments
Patch (45.78 KB, patch)
2022-03-23 14:59 PDT, Nikos Mouchtaris
simon.fraser: review+
ews-feeder: commit-queue-
Patch (45.77 KB, patch)
2022-03-24 14:24 PDT, Nikos Mouchtaris
no flags
Nikos Mouchtaris
Comment 1 2022-03-23 14:59:29 PDT
Nikos Mouchtaris
Comment 2 2022-03-24 14:24:01 PDT
EWS
Comment 3 2022-03-24 16:54:10 PDT
Committed r291830 (248851@main): <https://commits.webkit.org/248851@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455683 [details].
Radar WebKit Bug Importer
Comment 4 2022-03-24 16:55:17 PDT
Note You need to log in before you can comment on or make changes to this bug.