Fix serialization of nan, infinity, -infinity for calc() https://bugs.webkit.org/show_bug.cgi?id=238288

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-values/calc-catch-divide-by-0-expected.txt:
* web-platform-tests/css/css-values/calc-infinity-nan-serialize-angle-expected.txt:
* web-platform-tests/css/css-values/calc-infinity-nan-serialize-length-expected.txt:
* web-platform-tests/css/css-values/calc-infinity-nan-serialize-time-expected.txt:

Source/WebCore:

Update serializing of nan, infinity, -infinity to be in line with step 2 of:
https://drafts.csswg.org/css-values/#calc-serialize.

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::formatNumberValue const):
(WebCore::CSSPrimitiveValue::formatIntegerValue const):



Canonical link: https://commits.webkit.org/248851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291830 268f45cc-cd09-0410-ab3c-d52691b4dbfc